--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -250,6 +250,7 @@ h1 {
     padding: 10px;
     transition: 0.3s;
 }
+
 .orden-card:hover {
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.29);
     transform: scale(1.05);
@@ -677,7 +678,108 @@ p {
     box-shadow: 0px 5px 5px rgba(255, 77, 77, 0.26);
 }
 
-.link-naranja{
+.link-naranja {
     color: rgb(255, 157, 0);
     cursor: pointer;
+}
+
+.input-error {
+    background: #ffffff;
+    padding: 10px 30px 10px 30px;
+    box-shadow: 0px 6px 20px 2px rgba(255, 0, 0, 0.2), inset 0px 0px 9px rgba(255, 15, 0, 0.29);
+    color: var(--bs-red);
+}
+
+
+
+
+.offcanvas-motorista {
+    background: linear-gradient(180deg, rgba(246, 245, 247, 0.5) 0%, rgb(246, 245, 247) 100%);
+    border-radius: 15px;
+    box-shadow: 0px -1px 22px rgba(0, 0, 0, 0.25);
+    filter: blur(0px);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+}
+
+.card-motorista-orden {
+    background: white;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: all 0.3s linear;
+}
+
+.card-motorista-orden:hover {
+    transform: scale(1.05);
+}
+
+.card-motorista-orden-referencias {
+    font-size: 10px;
+    color: var(--bs-gray-600);
+    padding: 0px;
+    margin: 0px;
+}
+
+.card-motorista-orden-descripcion {
+    font-size: 12px;
+    color: var(--bs-gray-600);
+    padding: 0px;
+    margin: 0px;
+
+}
+
+.card-motorista-orden-imagen {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.card-motorista-orden-item {
+    box-shadow: 0px 0px;
+}
+
+@media (min-width: 768px) {
+    .card-motorista-orden-imagen {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 5px;
+    }
+
+    .card-motorista-orden p {
+        font-size: 18px;
+    }
+
+    .card-motorista-orden h6 {
+        font-size: 25px;
+    }
+
+}
+
+.nav-motorista {
+
+    /*d-flex flex-row justify-content-between align-items-center mx-3*/
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    width: 100vw;
+}
+
+#map {
+    height: 100vh;
+    width: 100%;
+}
+
+.btn-line {
+    height: 0px;
+    margin-bottom: 10px;
+    width: 71px;
+    background: var(--bs-gray-400);
+    border-radius: 55px;
 }
